--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(190, 155, 255);
+    background-color: rgb(111, 35, 252);
 }
 .main {
     width: 70%;
@@ -53,7 +53,7 @@ svg {
     width: 350px;
 }
 .letter {
-    border-bottom: 2px solid rgb(111, 0, 255);
+    border-bottom: 2px solid rgb(244, 236, 255);
     display: inline-flex;
     font-size: 30px;
     align-items: center;
@@ -81,8 +81,10 @@ svg {
 }
 #play {
     width: 150px;
-    height: 40px;
-    border-radius: 10px;
+    height: 50px;
+    border: 1px solid rgb(44, 0, 44);
+    background-color: rgb(223, 207, 250);
+    /* border-radius: 10px; */
     cursor: pointer;
     margin-top: 100px;
     color: rgb(44, 0, 44);
@@ -94,6 +96,14 @@ svg {
     color: red;
     margin-top: 50px;
     visibility: hidden;
+}
+@keyframes move {
+    0% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(80px);
+    }
 }
 h2 {
     font-size: 35px;
